# Omicsomics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY_FINAL.md  DATA_FORMAT.md  DEPLOYMENT.md  FEATURES.md  FINAL_REPORT.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_CONFIG.md  MERGED_SUMMARIES.md  PIPELINE_BUILDER_COMPLETE.md  PIPELINE_FORMAT.md  PROJECT_COMPLETION.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_NEW.md  RUNNING_SERVICES.md  SECURITY.md  STARTUP_STATUS.md  TODO_FULL.md  TROUBLESHOOTING.md  docker-logs.sh  docker-shell.sh  docker-start.sh  docker-stop.sh  manage.sh  next-steps.md  outline.md  package-lock.json  run_backend.sh  start_backend.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  startup.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_runs_and_datafiles.py  0003_add_custom_pipelines.py  20251106_0001_create_projects_table.py  5e8f44ef46d2_initial_migration.py  7bcbce7a1084_initial_schema_with_all_models.py  83e6f8cb0bc7_remove_unique_constraint_from_project_.py  a1b2c3d4e5f6_enhance_run_model_with_pipeline_fields.py  add_format_conversion.py
backend/app/: celery_app.py  database.py  main.py  settings.py
backend/app/api/: custom_scripts.py  data_editing.py  data_export.py  data_merger.py  datasets.py  interactive_conversion.py  pipeline_datasets.py  quick_visualizer.py  visualization_workspace.py
backend/app/api/dependencies/: __init__.py  auth.py  database.py
backend/app/api/routers/: __init__.py  auth.py  converters.py  custom_pipelines.py  data.py  epigenomics.py  files.py  formats.py  genomics.py  gwas.py  metabolomics.py  multiomics.py  pipelines.py  projects.py  proteomics.py  qc.py  runs.py  samples.py  singlecell.py  tools.py  transcriptomics.py  users.py  visualizations.py  workflows.py
backend/app/converters/: __init__.py  alignment_converter.py  annotation_converter.py  base.py  compression_handler.py  expression_converter.py  format_converter.py  genomics.py  interactive_converter.py  interval_converter.py  metabolomics.py  pipeline_auto_converter.py  proteomics.py  python_data_converter.py  r_data_converter.py  sequence_converter.py  transcriptomics.py  variant_converter.py
backend/app/converters/scenarios/: __init__.py  additional_scenarios.py  expression_matrix_standardization.py  gwas_standardization.py  proteomics_standardization.py  single_cell_import.py
backend/app/core/: crypto.py  security.py  tools_registry.py
backend/app/models/: __init__.py  custom_pipeline.py  custom_scripts.py  data_editing.py  data_export.py  datafile.py  dataset.py  file.py  format_conversion.py  project.py  run.py  sample.py  user.py  visualization_workspace.py  workflow.py
backend/app/pipelines/: __init__.py  epigenomics.py  genomics.py  gwas.py  metabolomics.py  multiomics.py  proteomics.py  singlecell.py  transcriptomics.py
backend/app/schemas/: files.py  projects.py  runs.py  samples.py  tools.py  unified_format.py  users.py  workflows.py
backend/app/services/: custom_pipelines.py  custom_scripts.py  data_editing.py  data_export.py  data_merger.py  datafiles.py  dataset_manager.py  file_processor.py  files.py  pipeline_dataset_service.py  pipeline_executor.py  pipeline_templates.py  projects.py  quality_control.py  quick_visualizer.py  runs.py  samples.py  search.py  storage_service.py  users.py  visualization_workspace.py  workflows.py
backend/app/storage/: s3.py
backend/app/tasks/: file_tasks.py
backend/app/tools/: tool_variants.json  visualization_tools.json
backend/app/utils/: archive.py  export.py
backend/app/utils/data_ingest/parsers/: fastq_parser.py  h5ad_parser.py  mzml_parser.py
backend/app/visualizations/: generator.py
backend/app/workflows/: executor.py
backend/tests/: conftest.py  test_archive.py  test_auth.py  test_bioinformatics_converters.py  test_crypto.py  test_data.py  test_epigenomics.py  test_gwas.py  test_health.py  test_metabolomics.py  test_multiomics.py  test_projects.py  test_proteomics.py  test_runs.py
backend/tests/integration/: test_archive_processing.py
docs/: ARCHITECTURE.md  ARCHIVE_PROCESSING.md  ASYNC_PROCESSING.md  BIOCONVERTER_DOCUMENTATION_INDEX.md  BIOCONVERTER_MATERIALS_SUMMARY.md  BIOCONVERTER_QUICK_REFERENCE.md  BIOCONVERTER_USAGE.md  BIOINFORMATICS_FORMATS_ANALYSIS.md  CROSS_RUNTIME_INTEGRATION.md  CUSTOM_SCRIPT_TOOLS.md  DATASET_MANAGER.md  DATA_EDITING.md  DATA_EXPORT.md  DATA_FLOW_AND_REQUIREMENTS.md  DEPLOYMENT.md  FORMAT_CONVERSION_IMPLEMENTATION.md  FORMAT_CONVERSION_ROADMAP.md  FORMAT_CONVERSION_SYSTEM.md  IMPLEMENTATION_PIPELINE_BUILDER.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_WEEK1_FORMATS.md  PHASE1_WEEK2_FORMATS.md  PHASE1_WEEK3_FORMATS.md  (+18 more)
(+167 files in other folders)
